2012-09-25  Niibe Yutaka  <gniibe@fsij.org>

	* boards/STM8S_DISCOVERY/mcuconf.h (STM32_PPRE2, STM32_ADCPRE):
	12MHz ADC clock gives us more speed.

	* boards/STM8S_DISCOVERY/board.h (VAL_GPIOCCRL): Digital push pull
	output 50MHz gives us more entropy.

	* src/random.c (adcgrpcfg): To acquire more entropy and more speed,
	our choise is IN10 and IN11 (which is unconnected).

2012-09-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (main): Call neug_select.
	* src/random.c (neug_select): New.
	(rng_gen): Implement Raw output.
	(hash_df_initial_string): Fix (was: 32, no of bytes).
	(rng): Implement error recovery.

2012-09-19  Niibe Yutaka  <gniibe@fsij.org>

	* tool/neug_upgrade.py: New.

	* src/main.c (main): Support reGNUal.
	* src/neug.ld.in (__ram_end__): Define.
	* src/random.c (rng): Finish upon request of termination.
	(neug_fini): New.
	* src/neug.h (neug_fini): New.

2012-09-18  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c (NUM_NOISE_INPUTS, REPITITION_COUNT_TEST_CUTOFF)
	(ADAPTIVE_PROPORTION_64_TEST_CUTOFF)
	(ADAPTIVE_PROPORTION_4096_TEST_CUTOFF): Change for draft SP 800-90b,
	the section 6.2 "Full Entropy Source Requirements".

2012-09-13  Niibe Yutaka  <gniibe@fsij.org>

	* src/aes-constant-ft.c: New (from Gnuk).

2012-09-12  Niibe Yutaka  <gniibe@fsij.org>

	* src/sha256.c, src/sha256.h: New (from Gnuk).

	* boards/STBEE/board.h (GPIOD_USB_ENABLE): Fix.

2012-09-11  Niibe Yutaka  <gniibe@fsij.org>

	Health tests (SP 800-90b).
	* src/random.c (repetition_count_test)
	(adaptive_proportion_64_test, adaptive_proportion_4096_test): New.

2012-09-10  Niibe Yutaka  <gniibe@fsij.org>

	* NEUG_USB_DEVICE_ID: New file.

	* src/main.c: Include usb-vid-pid-ver.c.inc and usb-strings.c.inc.

	* src/configure (vidpid): New.

2012-08-30  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.02.

2012-08-27  Niibe Yutaka  <gniibe@fsij.org>

	Use WELL random number generator to whiten noise input.
	* src/random.c (NUM_NOISE_INPUTS): Now, it's 6.